<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mathematics"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_view_story"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="150dp"
            android:textColor="@color/gray_A"
            android:textSize="24sp"
            android:layout_margin="@dimen/button_margin"
            android:gravity="start|bottom"
            tools:text="1234567890"/>

    <TextView
        android:id="@+id/text_view_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:textSize="54sp"
        android:textStyle="bold"
        android:textColor="@color/gray_3"
        android:gravity="end"
        tools:text="012"
        android:background="@color/white_1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_1"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_2"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_3"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_div"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_4"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_5"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_6"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mult"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_7"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_8"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_9"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_0"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="18"/>

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dot"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear"
            android:textSize="@dimen/button_text"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"/>

        <Button
            android:id="@+id/btn_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_equals"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"/>
    </LinearLayout>

<!--    <Space-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"/>-->


</LinearLayout>